--- a/src/index.css
+++ b/src/index.css
@@ -1,10 +1,14 @@
 html,
 body {
-  height: 100%;
+  min-height: 100vh;
   margin: 0;
   padding: 0;
   font-family: 'Nunito';
   background-color: #f2f2f2;
+}
+
+* {
+  box-sizing: border-box;
 }
 
 #root {
